--- a/Implementation/frontend-angular/src/app/map/map.component.css
+++ b/Implementation/frontend-angular/src/app/map/map.component.css
@@ -7,3 +7,16 @@
   height: 100%;
   z-index: -1;
 }
+.timeVal {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 400px;
+  height: 740px;
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 5px;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  z-index: -1;
+}
