--- a/Implementation/frontend-angular/src/app/time-series/time-series.component.html
+++ b/Implementation/frontend-angular/src/app/time-series/time-series.component.html
@@ -1,10 +1,8 @@
-<div id="map"></div>
-
-
 <div class="timeVal">
     <ngb-timepicker [(ngModel)]="time"></ngb-timepicker>
     <ngb-timepicker [(ngModel)]="time1"></ngb-timepicker>
     <hr>
+
     <div class="container">  
         <form [formGroup]="form" (ngSubmit)="submit()">
                
@@ -15,6 +13,9 @@
                     <option>Choose Weekday</option>
                     <option *ngFor="let weekday of weekList">{{weekday}}</option>
                 </select>
+                <!-- <div *ngIf="f.website.touched && f.website.invalid" class="alert alert-danger">
+                    <div *ngIf="f.website.errors.required">Name is required.</div>
+                </div> -->
             </div>
             <div class="form-group">
                 <label for="weekNumber">Week Number:</label>
@@ -23,9 +24,11 @@
                     <option>Choose Number</option>
                     <option *ngFor="let num of weeknum">{{num}}</option>
                 </select>
+                <!-- <div *ngIf="f.website.touched && f.website.invalid" class="alert alert-danger">
+                    <div *ngIf="f.website.errors.required">Name is required.</div>
+                </div> -->
             </div>
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
-        <div>Result: {{resulttext}}</div>
     </div>
 </div>      
