--- a/Implementation/frontend-angular/src/app/map/map.component.html
+++ b/Implementation/frontend-angular/src/app/map/map.component.html
@@ -2,7 +2,9 @@
 
 
 <div class="timeVal">
+    <label>Start Time:</label>
     <ngb-timepicker [(ngModel)]="time"></ngb-timepicker>
+    <label>End Time:</label>
     <ngb-timepicker [(ngModel)]="time1"></ngb-timepicker>
     <hr>
     <div class="container">  
