Few tweaks and changes

--- a/Implementation/frontend-angular/src/app/map/map.component.html
+++ b/Implementation/frontend-angular/src/app/map/map.component.html
@@ -29,5 +29,6 @@
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
         <div>Result: {{resulttext}}</div>
+        <div>The most predicted sound for the week is: {{soundName}}</div>
     </div>
 </div>      
